--- a/api/TDAProject/Web/packages.config
+++ b/api/TDAProject/Web/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net471" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net471" />
